# SCPI-Command-Sender

./: .gitignore  LICENSE  README.md  logger.py  main.py  pyproject.toml  requirements.txt  scpi_backend.py  scpi_gui.py
config/: 11.json  presets.json
scpi_app/: __init__.py
scpi_app/core/: __init__.py  logger.py  scpi.py
scpi_app/gui/: __init__.py  scpi_gui.py
