[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "scpi_app"
version = "1.0.0"
authors = [
    {name = "Martinxux", email = "wave.martin@example.com"},
]
description = "SCPI Test Application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[project.urls]
Homepage = "https://mtnxu.com"
Repository = "https://example.com/repo"